Center sidebar at small sizes, fix instagram grid alignment

--- a/assets/sass/layout/_content-sidebar.scss
+++ b/assets/sass/layout/_content-sidebar.scss
@@ -36,6 +36,8 @@
 
 .site-content .widget-area {
 	max-width: $bp_1;
+	margin-left: auto;
+	margin-right: auto;
 
 	@media screen and (min-width: $bp_2) {
 		float: right;
