--- a/style.css
+++ b/style.css
@@ -915,18 +915,26 @@ a:hover, a:active {
 /**
  * WP Instagram Widget
  */
-.instagram-pics {
-  list-style: none;
+ul.instagram-pics {
+  max-width: calc( 300px + 1em );
+  margin-left: auto;
+  margin-right: auto;
   padding: 0;
+  list-style: none;
 }
 
 .instagram-pics li {
   display: inline-block;
-  width: 48%;
+  width: calc(50% - 0.5em);
+  margin-bottom: 1em;
+}
+
+.instagram-pics li img {
+  vertical-align: top;
 }
 
 .instagram-pics li:nth-child(2n) {
-  margin-left: 4%;
+  margin-left: 1em;
 }
 
 .instagram-pics img {
@@ -1120,6 +1128,8 @@ a:hover, a:active {
 .site-content .widget-area, .site-categories .widget-area,
 .site-info .widget-area {
   max-width: 25em;
+  margin-left: auto;
+  margin-right: auto;
 }
 @media screen and (min-width: 50em) {
   .site-content .widget-area, .site-categories .widget-area,
